--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^6.16.3",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@solana/web3.js": "^1.98.4",
     "prisma": "^6.16.3",
     "telegraf": "^4.16.3"
   }
