--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@prisma/client": "^6.16.3",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
+    "axios": "^1.12.2",
     "bs58": "^6.0.0",
     "prisma": "^6.16.3",
     "telegraf": "^4.16.3"
