--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
+    "@types/chai": "^5.2.2",
+    "@types/mocha": "^10.0.10",
     "axios": "^1.12.2",
     "bs58": "^6.0.0",
+    "chai": "^6.2.0",
     "prisma": "^6.16.3",
     "telegraf": "^4.16.3"
   },
